<resources>
    <string name="LOADING">Loading…</string>
    <string name="_33092992992_33092992923_hello_33092992923">"33092992992
--------------------------
33092992923, Hello :)
--------------------------
33092992923
--------------------------"</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_close">Close action</string>
    <string name="ac_open">Open action</string>
    <string name="accept_now">Accept now?</string>
    <string name="activate_btn">Activate</string>
    <string name="activate_pause">Activate pause</string>
    <string name="activate_title">TselZap Activation</string>
    <string name="activation_success">Activation was successful!</string>
    <string name="add_new">Add</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="added_contact_message">Contact added</string>
    <string name="alert">Alert</string>
    <string name="all_contacts">[ ALL CONTACTS ]</string>
    <string name="allow_send">Allow sending</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer">Answer:</string>
    <string name="answer_edit">Answer</string>
    <string name="answer_required">The answer is required</string>
    <string name="answer_text">Enter answer text...</string>
    <string name="api_contacts">Contacts API</string>
    <string name="api_endpoint_hint">https://example.com/api/endpoint</string>
    <string name="api_endpoint_required">API endpoint is required</string>
    <string name="api_help_description">To integrate with your system, configure an endpoint that accepts POST requests in the format above. Your server must respond with an array of messages in the provided format.</string>
    <string name="api_help_title">API Integration</string>
    <string name="api_mode_enabled">API mode enabled</string>
    <string name="api_webhook_saved_successfully">API endpoint saved successfully</string>
    <string name="app_name">TselZap</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="at">at</string>
    <string name="at_least_one_app_required">At least one app must be selected</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="auto_send">Auto send</string>
    <string name="auto_send_api">API Auto Send</string>
    <string name="auto_send_api_custom">Custom API</string>
    <string name="beta_feature_explanation">Enable this feature to access experimental functionality. Requires permission to display over other apps.</string>
    <string name="bot_disabled">Bot disabled</string>
    <string name="bot_enabled">Bot successfully activated</string>
    <string name="bot_status">Bot Status</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bullet_dot">●</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_">Cancel</string>
    <string name="cancelled_added_contact">Contact add cancelled</string>
    <string name="card_contacts_subtitle">Sync your contacts securely</string>
    <string name="card_contacts_title">Contact Manager</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_bot">Chat bot</string>
    <string name="checking_for_permissions">Checking for permissions</string>
    <string name="clean_sender_log">Clear</string>
    <string name="clear_api_log">Clear</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cliente_edit">Client</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">207cad4a75e34145b7a1054fc3ce3290</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="configure_time_title">Time Settings in Seconds</string>
    <string name="contact">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_whatsapp">WHATSAPP CONTACTS</string>
    <string name="contains">Contains</string>
    <string name="contains_match_helper">Bot will respond when messages contain these words</string>
    <string name="contains_word">Contains word</string>
    <string name="copy">Copy</string>
    <string name="default_answer">Default Answer</string>
    <string name="default_message">Default message</string>
    <string name="default_message_any_text">Default Message (responds to any text)</string>
    <string name="default_message_helper">This will be used when no pattern matches</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="default_web_client_id">487633753351-sfu079jujohidjgh4h3vgjpp03v8lb6b.apps.googleusercontent.com</string>
    <string name="delay_in_seconds">Delay (seconds)</string>
    <string name="delete">Delete</string>
    <string name="dest_title">destination title</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">"Here's a message!"</string>
    <string name="dialog_hint_phone_input">Enter your phone number</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_text_phone">Number:</string>
    <string name="dialog_title_confirm_phone">Phone number confirmation</string>
    <string name="dialog_title_enter_phone">Enter your phone number</string>
    <string name="dialog_toast_invalid_phone">Invalid phone number. Please enter a number with 10 to 11 digits.</string>
    <string name="dialog_toast_phone_confirmed">Number confirmed successfully.</string>
    <string name="dialog_toast_phone_saved">Number saved successfully.</string>
    <string name="dismiss_button_content_description">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="edit_icon_description">Edit icon</string>
    <string name="editor">Editor</string>
    <string name="elapsed_time">Elapsed time: %1$s s</string>
    <string name="enter_contact_details">Enter contact details</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="exact_match">Exact Match</string>
    <string name="help">Help</string>
    <string name="question">Question:</string>
    <string name="question_edit">Question</string>
    <string name="question_text">Enter question text...</string>
    <string name="request_format">Request Format:</string>
    <string name="response_format">Response Format:</string>
    <string name="response_settings">Response Settings</string>
    <string name="response_type">Response Type</string>
    <string name="save">Save</string>
    <string name="save_api">Save API</string>
    <string name="settings">Settings</string>
    <string name="site_api">API Mode</string>
    <string name="versions">Available Modes</string>
</resources>