<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@id/card_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" app:cardCornerRadius="12.0dip" app:cardElevation="4.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/question" android:layout_marginEnd="4.0dip" />
            <com.google.android.material.chip.ChipGroup android:layout_width="fill_parent" android:layout_height="wrap_content" app:singleLine="true">
                <com.google.android.material.chip.Chip android:textSize="10.0sp" android:textColor="@android:color/white" android:id="@id/exact_match_chip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exact_match" app:chipBackgroundColor="@color/colorSecondary" app:chipMinHeight="24.0dip" />
                <com.google.android.material.chip.Chip android:textSize="10.0sp" android:textColor="@android:color/white" android:id="@id/contains_chip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contains" app:chipBackgroundColor="@color/primary" app:chipMinHeight="24.0dip" />
                <com.google.android.material.chip.Chip android:textSize="10.0sp" android:textColor="@android:color/white" android:id="@id/default_message_chip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_message" app:chipBackgroundColor="@color/colorPrimary" app:chipMinHeight="24.0dip" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
        <TextView android:textSize="16.0sp" android:textColor="?colorTextSecond" android:id="@id/question_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="8.0dip" />
        <View android:background="@color/divider_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="12.0dip" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/answer" />
        <TextView android:textSize="16.0sp" android:textColor="?colorTextSecond" android:id="@id/answer_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" />
    </LinearLayout>
</androidx.cardview.widget.CardView>