<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appBarLayout" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" app:elevation="0.0dip">
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" app:cardCornerRadius="16.0dip" app:cardElevation="4.0dip">
            <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textStyle="bold" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/bot_status" android:layout_weight="1.0" android:fontFamily="@font/opensanslt" />
                    <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/botStatusSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="checkBot" />
                </LinearLayout>
                <View android:background="@color/divider_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/boinacor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/versions" android:fontFamily="@font/opensanslt" />
                <RadioGroup android:id="@id/radiogroupBot" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <com.google.android.material.checkbox.MaterialCheckBox android:textColor="?colorTextPrimary" android:id="@id/checkBoxWhatsAppBusiness" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Business" android:fontFamily="@font/opensanslt" android:buttonTint="@color/colorPrimary" />
                    <com.google.android.material.checkbox.MaterialCheckBox android:textColor="?colorTextPrimary" android:id="@id/checkBoxWhatsApp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="Normal" android:fontFamily="@font/opensanslt" android:buttonTint="@color/colorPrimary" />
                </RadioGroup>
                <View android:background="@color/divider_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <com.google.android.material.switchmaterial.SwitchMaterial android:textColor="?colorTextPrimary" android:id="@id/apiSwitch" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/site_api" android:layout_weight="1.0" android:fontFamily="@font/opensanslt" />
                    <com.google.android.material.button.MaterialButton android:textColor="@color/colorPrimary" android:id="@id/help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help" android:fontFamily="@font/opensanslt" app:icon="@drawable/ic_help" app:iconTint="@color/colorPrimary" style="@style/Widget.MaterialComponents.Button.TextButton" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/apilayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/api_endpoint_hint" app:endIconMode="clear_text" app:startIconDrawable="@drawable/ic_link" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText android:textSize="14.0sp" android:textColor="@color/text_primary" android:id="@id/textinputsite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textUri" android:fontFamily="@font/opensanslt" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton android:id="@id/sendapi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/save_api" android:fontFamily="@font/opensanslt" app:cornerRadius="8.0dip" app:icon="@drawable/ic_save" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/card_recycler_view" android:paddingBottom="80.0dip" android:scrollbars="vertical" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:textColor="@android:color/white" android:layout_gravity="end|bottom|center" android:id="@id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/add_new" app:backgroundTint="@color/colorPrimary" app:icon="@drawable/ic_add" app:iconTint="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>