<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/request_format" android:fontFamily="@font/opensanslt" />
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" app:cardBackgroundColor="@color/code_background" app:cardCornerRadius="8.0dip" app:cardElevation="2.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:textColor="@color/code_text" android:id="@id/sendPost" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fontFamily="monospace" />
                <com.google.android.material.button.MaterialButton android:textColor="@color/colorPrimary" android:layout_gravity="end" android:id="@id/copyRequestButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy" app:icon="@drawable/ic_copy" app:iconTint="@color/colorPrimary" style="@style/Widget.MaterialComponents.Button.TextButton" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/response_format" android:fontFamily="@font/opensanslt" />
        <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" app:cardBackgroundColor="@color/code_background" app:cardCornerRadius="8.0dip" app:cardElevation="2.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:textColor="@color/code_text" android:id="@id/getSend" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fontFamily="monospace" />
                <com.google.android.material.button.MaterialButton android:textColor="@color/colorPrimary" android:layout_gravity="end" android:id="@id/copyResponseButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy" app:icon="@drawable/ic_copy" app:iconTint="@color/colorPrimary" style="@style/Widget.MaterialComponents.Button.TextButton" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView android:textSize="14.0sp" android:textColor="@color/text_secondary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/api_help_description" android:fontFamily="@font/opensanslt" />
        <com.google.android.material.button.MaterialButton android:id="@id/closeButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/close" app:cornerRadius="8.0dip" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>